Update to 6.1.1 and latest snapshot (#213)