@@ -18,7 +18,6 @@ package io.micronaut.tracing.instrument.http;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import io.micronaut.context.annotation.ConfigurationProperties;
 import io.micronaut.core.annotation.Nullable;
@@ -67,7 +66,7 @@ public class TracingExclusionsConfiguration {
 
         List<Pattern> patterns = exclusions.stream()
             .map(Pattern::compile)
-            .collect(Collectors.toList());
+            .toList();
         return uri -> patterns.stream().anyMatch(pattern -> pattern.matcher(uri).matches());
     }
 }
